<resources>
    <string name="app_name">Swipe</string>
    <string name="sample_name">Product Name</string>
    <string name="sample_type">Product Type</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_product">New Product</string>
    <string name="Rs">\u20B9</string>
    <string name="percent">%</string>
    <string name="tax">Tax:</string>
    <string name="productAndService">Product &amp; Service</string>
    <string name="addProduct">Add Product</string>
    <string name="type">Type</string>
    <string name="product">Product</string>
    <string name="service">Service</string>
    <string name="product_name">Product Name*</string>
    <string name="selling_price">Selling Price</string>
    <string name="tax_rate">Tax Rate%</string>
    <string name="product_images">Product Images</string>
    <string name="product_images_desc">Product images be PNG or JPEG, recommended 1024 px by 1024 px or 1:1 aspect ratio.</string>
    <string name="_100000_00">100000.00</string>
    <string name="new_nimage">New\nImage</string>
</resources>