<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddProductFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/type"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tv_type">

            <RadioButton
                android:id="@+id/radio_product"
                style="@style/Widget.App.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio_service"
                style="@style/Widget.App.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/service"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/product_name"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group" />

        <EditText
            android:id="@+id/et_product_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_background"
            android:hint="@string/product_name"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_product_name">

            <TextView
                android:id="@+id/tv_selling_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="4dp"
                android:text="@string/selling_price"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_product_name" />

            <EditText
                android:id="@+id/et_selling_price"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_background"
                android:drawableStart="@drawable/ic_baseline_currency_rupee_24"
                android:hint="@string/_100000_00"
                android:inputType="numberDecimal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_selling_price" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/et_product_name">

            <TextView
                android:id="@+id/tv_tax_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="4dp"
                android:text="@string/tax_rate"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_product_name" />

            <EditText
                android:id="@+id/et_tax_amount"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_background"
                android:hint="10.00"
                android:inputType="numberDecimal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_selling_price" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_product_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/product_images"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/tv_product_image_Desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/product_images_desc"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_image" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_image_Desc">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="35dp"
                android:paddingTop="20dp"
                android:paddingEnd="35dp"
                android:paddingBottom="20dp">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/ic_baseline_add_photo_alternate_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/new_nimage"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:elevation="8dp"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_image_Desc">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/item_image_item" />

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btn_add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addProduct"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>